--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.10...3.18)
 
 project(afo VERSION 0.1)
 
+set(BOOST_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/boost)
+
 add_subdirectory(Optimizer)
 add_subdirectory(TestFunctions)
 add_subdirectory(UnitTest)
